--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
-*{
+* {
     font-family: sans-serif;
     box-sizing: border-box;
 }
-.heading-container{
+
+.heading-container {
     background-image: url(images/donation10.jpg);
     background-size: cover;
     background-position: center;
@@ -12,25 +13,29 @@
     filter: contrast(.7);
     -webkit-filter: contrast(.7);
 }
-.help{
+
+.help {
     text-align: center;
     text-transform: capitalize;
     padding-top: 25%;
     padding-bottom: 25%;
 }
-.help-head{
+
+.help-head {
     color: white;
     font-size: 50px;
     font-weight: 800;
     text-shadow: 0 0 5px #FF0000;
 }
-.help-txt{
+
+.help-txt {
     color: white;
     font-size: 20px;
     padding: 0 10%;
     text-shadow: 2px 2px 4px #000000;
 }
-.donate-btn{
+
+.donate-btn {
     width: 150px;
     height: 60px;
     font-size: 22px;
@@ -44,21 +49,24 @@
     margin-top: 20px;
 }
 
-.donate-heading{
+.donate-heading {
     text-align: center;
     margin-top: 100px;
     font-size: 40px;
 }
-.donate-txt{
+
+.donate-txt {
     text-align: center;
 }
-.btn-div{
+
+.btn-div {
     display: flex;
     justify-content: center;
     gap: 20px;
     margin-bottom: 30px;
 }
-.tk-btn{
+
+.tk-btn {
     height: 100px;
     width: 150px;
     border: none;
@@ -72,73 +80,150 @@
     -o-border-radius: 5px;
     font-weight: 600;
 }
-.tk-btn:hover{
+
+.tk-btn:hover {
     color: orangered;
     border: 2px solid orangered;
 }
-.input-div{
+
+.input-div {
     display: flex;
- justify-content: center;
-align-content: center;
+    justify-content: center;
+    align-content: center;
 }
-input{
+
+.tk-input {
     border-top-style: hidden;
-   border-right-style: hidden;
-   border-left-style: hidden;
-   border-bottom-style: groove;
-   background-color: #fff;
-   width: 830px;
-   height: 50px;
-   text-align: center;
+    border-right-style: hidden;
+    border-left-style: hidden;
+    border-bottom-style: groove;
+    background-color: #fff;
+    width: 830px;
+    height: 50px;
+    text-align: center;
 }
-.carts{
+
+.carts {
     display: flex;
     justify-content: space-around;
     margin: 30px;
 }
-.cart1,.cart2,.cart3{
-   width: 30%;
-   height: auto;
-   padding: 30px;
+
+.cart1,
+.cart2,
+.cart3 {
+    width: 30%;
+    height: auto;
+    padding: 30px;
 }
-.cart1{
+
+.cart1 {
     background-color: #EDF5F6;
 }
-.cart2{
+
+.cart2 {
     background-color: #FFEEEE;
 }
-.cart3{
+
+.cart3 {
     background-color: #FFF4D6;
 }
-.edu{
+
+.edu {
     width: auto;
     height: 20%;
 }
-.lives{
+
+.lives {
     display: flex;
     justify-content: space-around;
     margin-top: 100px;
-    
+
 }
-.lives-heading{
+
+.lives-heading {
     text-align: left;
     padding-left: 10%;
 }
-.lives-txt{
- text-align: left;  
- padding-left: 10%; 
+
+.lives-txt {
+    text-align: left;
+    padding-left: 10%;
 }
 
-.lives-img{
+.lives-img {
     width: 100%;
     height: auto;
+    border-radius: 5px;
 }
-.item{
+
+.item {
     width: 50%;
 }
-.item2{
+
+.item2 {
     width: 40%;
 }
-.contribute-btn{
-    
+
+.contribute-btn {
+    width: 250px;
+    height: 60px;
+    font-size: 22px;
+    background-color: red;
+    color: white;
+    border-radius: 7px;
+    -webkit-border-radius: 7px;
+    -moz-border-radius: 7px;
+    -ms-border-radius: 7px;
+    -o-border-radius: 7px;
+    margin-top: 20px;
+    margin-left: 10%;
+}
+
+.contact {
+    display: block;
+    justify-content: center;
+    padding: 5%;
+    width: 80%;
+    margin: auto;
+    position: relative;
+    text-align: center;
+}
+
+.email {
+    background-color: #FFF4D6;
+    height: 200px;
+}
+
+.email-input {
+    margin-top: 8%;
+    width: 300px;
+    height: 40px;
+    background-color: rgb(173, 158, 158);
+    border-radius: 5px;
+}
+
+.subscribe-btn {
+    margin-top: 8%;
+    width: 100px;
+    height: 40px;
+    background-color: #FF0000;
+    border-radius: 5px;
+}
+
+footer {
+    width: auto;
+    height: 200px;
+    background-color: #000000;
+}
+
+.footer-content {
+    color: #EDF5F6;
+    text-align: center;
+    font-family: 'Signika', sans-serif;
+    padding-top: 50px;
+}
+
+.humble {
+    color: #FF0000;
 }
